--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: 5.183.32.187, port: 22610, type: vmess, uuid: 46a2f46a-c56f-487b-b2c9-b4204bf8021e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.34MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5603, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.39MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.41MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-178.3KB/s(Youtube:不良林), server: 172.104.206.42, port: 31221, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.53MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.08MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.46MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.28MB/s(Youtube:不良林), server: inap006.xmrth-node.xyz, port: 11865, type: vmess, uuid: f727bfd8-122f-38a0-82b4-d98e61820d0e, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: inap006.xmrth-node.xyz}}
-  - {name: 🇺🇸 美国-6.93MB/s(Youtube:不良林), server: kr05.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr05.wangxd.life, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-6.86MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.03MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
+  - {name: 🇨🇳 中国-8.67MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.52MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.42MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 台湾-2.14MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇮🇳 印度-178.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.93MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇮🇳 印度-178.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.93MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇮🇳 印度-178.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.93MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇮🇳 印度-178.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.93MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇮🇳 印度-178.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.93MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇮🇳 印度-178.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.93MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
-      - 🇮🇳 印度-178.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.93MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
