--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.08MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.46MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-6.86MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.03MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇨🇳 中国-8.67MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.52MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.13MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-5.46MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.42MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇨🇳 台湾-2.14MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-5.28MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-304.3KB/s(Youtube:不良林), server: hk001.369boy.com, port: 30156, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: hk001.369boy.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-304.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-304.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-304.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
       - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-304.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-304.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-304.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-304.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 🇭🇰 香港-304.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
